--- a/app/views/infos/help/help.scala.html
+++ b/app/views/infos/help/help.scala.html
@@ -163,30 +163,23 @@ title =  "帮助中心_食美特，爱美食爱生活"
                     <dt><a href="javascript:;">什么是淘宝/天猫返利？</a></dt>
                     <dd>
                         <p>当您在淘宝、天猫看见宝贝时，通过粘贴网址到食美特，将会返还一定比例的金额给您。使用食美特返利操作非常简单，只需要三步</p>
-                        <p> <img src="/assets/ui/help/3step.png"> <a href="/rebate">去看看详细情况</a> </p>
+                        <p> <a href="/rebate"><img src="/assets/ui/help/3step.png" alt="淘宝天猫返利"> </a> </p>
+                        <p><a href="/rebate">去看看详细情况</a></p>
                     </dd>
                 </dl>
                 <dl>
-                    <dt><a href="javascript:;">什么是食豆，食豆有什么用？</a></dt>
+                    <dt><a href="javascript:;">什么是食豆，食豆有什么用？如何获得食豆？</a></dt>
                     <dd>
-                        <p>使用邮箱注册成功之后，您需要去邮箱进行验证激活后，方可正常完整体验爱乐活所有功能。如果您没有收到验证邮件，</p>
-                        <p>1) 请检查注册邮箱是否填写正确，如果不正确可以更换邮箱重新发送验证邮件；</p>
-                        <p>2) 请尝试到邮箱的广告或垃圾邮件里找找看；</p>
-                        <p>3) 若还没有收到验证邮件，可以点击“重新发送验证邮件”，再收一次试试；</p>
+                        <p>食豆是食美特推出的虚拟币，食豆可以兑换现金，100个食豆 = 1元现金。食豆可以兑换现金(<a href="/user/account/shiDou">立即兑换</a>），还可以用来参与食美特活动 等等/a>) </p>
+                        <p>您可以通过下列方式获得食豆</p>
+                        <p>1) 发布宝贝，只要通过食美特收录，即可获得食豆</p>
+                        <p>2) 发布主题</p>
+                        <p>3) 参与讨论</p>
+                        <p>4) 食美特赠送</p>
+                        <p>4) ……</p>
 
                     </dd>
                 </dl>
-                <dl>
-                    <dt><a href="javascript:;">如何获得食豆？</a></dt>
-                    <dd>
-                        <p>使用邮箱注册成功之后，您需要去邮箱进行验证激活后，方可正常完整体验爱乐活所有功能。如果您没有收到验证邮件，</p>
-                        <p>1) 请检查注册邮箱是否填写正确，如果不正确可以更换邮箱重新发送验证邮件；</p>
-                        <p>2) 请尝试到邮箱的广告或垃圾邮件里找找看；</p>
-                        <p>3) 若还没有收到验证邮件，可以点击“重新发送验证邮件”，再收一次试试；</p>
-
-                    </dd>
-                </dl>
-
 
                 <!-- 内容 end -->
             </div>
