--- a/app/views/infos/help/jifenbao.scala.html
+++ b/app/views/infos/help/jifenbao.scala.html
@@ -31,19 +31,20 @@ title =  "关于我们_食美特，爱美食爱生活"
         <div class="inner">
             <div class="help-con">
                 <div class="help-hd">
-                    <h3>关于“食美特”</h3>
+                    <h3>购物送集分宝</h3>
                 </div>
                 <div class="help-bd">
                     <!-- 内容 start -->
-                    <p>食美特，爱美食爱生活 </p>
+                    <p>集分宝是由支付宝提供的积分服务，集分宝可以<strong class="rc">直接当钱花</strong>，100个集分宝抵扣1元钱。
+                        用户在淘宝、天猫上的交易以及在支付宝网站指定的交易场景（如信用卡还款、公共事业缴费等），可在支付时按集分宝兑换人民币的比例抵扣使用集分宝。
+                        用户也可通过将集分宝换购指定商品、捐赠给支付宝合作的公益项目等途径使用集分宝。用户使用集分宝时需遵守网站公布的最低使用数量等要求。
+                        集分宝不可转让或换取现金。 </p>
 
-                    <p>Smeite.com致力于发现绿色安全、健康美味的食品，推荐美观实用、简约实惠的家居用品以及充满创意的好玩意。
-                        我们严格把控商品的品质，用心创造一个值得信赖的购物分享社区。
-                        我们所做的一切，就是通过我们的努力，为更多的消费者提供更有效、更有价值的购物决策建议。
-
+                    <p>
+                       在食美特购物时，除了享受淘宝、天猫正常的折扣、赠送集分宝等等优惠之外，还享受食美特赠送的集分宝
                     </p>
 
-                    <p>理念：为大众创造更美好的日常生活</p>
+
 
 
 
