--- a/public/assets/css/template/infos.css
+++ b/public/assets/css/template/infos.css
@@ -35,7 +35,7 @@
     padding-bottom: 10px;
 }
 /* main */
-.main .inner{ padding: 50px; min-height: 700px; _height: 700px;}
+.main .inner{ padding: 50px; min-height: 500px; _height: 500px;}
 .help-hd h3{ height: 30px; margin-bottom: 15px; font: bold 14px/30px SimSun; border-bottom: 1px solid #ededed; }
 .help-bd{ line-height:22px;}
 
@@ -63,6 +63,7 @@
 
 .aboutUs p {
     margin: 0 0 20px 0;
+    line-height: 30px;
 }
 .agreement h2 {
     text-align: center;
