--- a/app/views/infos/help/cooperation.scala.html
+++ b/app/views/infos/help/cooperation.scala.html
@@ -31,21 +31,11 @@ title =  "关于我们_食美特，爱美食爱生活"
              <div class="inner">
                  <div class="help-con">
                      <div class="help-hd">
-                         <h3>关于“食美特”</h3>
+                         <h3>商务合作</h3>
                      </div>
                      <div class="help-bd">
                          <!-- 内容 start -->
-                         <p>食美特，爱美食爱生活 </p>
-
-                         <p>Smeite.com致力于发现绿色安全、健康美味的食品，推荐美观实用、简约实惠的家居用品以及充满创意的好玩意。
-                             我们严格把控商品的品质，用心创造一个值得信赖的购物分享社区。
-                             我们所做的一切，就是通过我们的努力，为更多的消费者提供更有效、更有价值的购物决策建议。
-
-                         </p>
-
-                         <p>理念：为大众创造更美好的日常生活</p>
-
-
+                         todo
 
                          <p><a href="/forum/view/2" target="_blank">食美特团队</a></p>
 
