adjust convert product

--- a/app/views/infos/help/jifenbao.scala.html
+++ b/app/views/infos/help/jifenbao.scala.html
@@ -27,7 +27,7 @@ title =  "关于我们_食美特，爱美食爱生活"
         </div>
 
     </div>
-    <div class="main help">
+    <div class="main jifenbao">
         <div class="inner">
             <div class="help-con">
                 <div class="help-hd">
