--- a/app/views/infos/help/aboutCheckIn.scala.html
+++ b/app/views/infos/help/aboutCheckIn.scala.html
@@ -31,12 +31,16 @@ title =  "关于我们_食美特，爱美食爱生活"
         <div class="inner">
             <div class="help-con">
                 <div class="help-hd">
-                    <h3>联系客服</h3>
+                    <h3>签到有奖</h3>
                 </div>
                 <div class="help-bd">
                     <!-- 内容 start -->
-                    <p>客服邮箱：kefu@@leho.com</p>
-                    <p>客服电话：4006666365（人工服务时间：9：00-18：00）</p>
+                     <p>食美特的居民们，现在签到送集分宝啦</p>
+
+                       todo
+                    <p>签到送大礼，精彩不断</p>
+                    <p>食美特居民们，非常感谢你们对我们的鼎力支持，我将不断的推出各种形式的签到送大礼活动</p>
+
 
                     <!-- 内容 end -->
                 </div>
