--- a/app/views/infos/help/contactUs.scala.html
+++ b/app/views/infos/help/contactUs.scala.html
@@ -36,24 +36,16 @@ title = "联系我们_食美特，爱美食爱生活"
                 <div class="help-bd">
                     <!-- 内容 start -->
                     <div>
-                        <p>Smeite.com致力于发现绿色安全、健康美味的食品，推荐美观实用、简约实惠的家居用品以及充满创意的好玩意。
-                            我们严格把控商品的品质，用心创造一个值得信赖的购物分享社区。
-                            我们所做的一切，就是通过我们的努力，为更多的消费者提供更有效、更有价值的购物决策建议。
-                        </p>
-                        <p>
-                            我们不鼓励商家擅自在网站上分享自家的商品，但欢迎优质的商家和品牌商与我们联系，按照我们的要求来推荐合适商品，参与活动，并为用户提供丰厚、可靠的商品。
-                            <br><br><strong>商家合作内容如下：</strong>
-                        </p>
-                        <!--  <p>1）	专享优惠 <a href="#" target="_blank">（查看详细介绍）</a></p>
-                          <p>2）	活动赞助 <a href="#" target="_blank">（查看详细介绍）</a></p>-->
-                        <p><strong>合作联系：</strong></p>
-                        <p>1）	加入合作QQ群：241691464</p>
-                        <p>2）	发送需求至Email：service@@smeite.com</p>
-                        <!--   <p>3）	加入商家微信群：微信号</p>
-                         <p>合作联系人：周先生</p>-->
+                        <p> 食美特的居民们！</p>
+                        <p> 感谢你们来到这里陪我们一起成长</p>
+                        <p> 没事来坐坐，许许愿望，唠唠嗑，侃侃大山，聊聊八卦……</p>
+                        <p> 哪里遇到问题，哪里遇到不爽就来吐吐槽</p>
+                        <p> 欢迎骚扰我们 <a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=1469909930&site=qq&menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:1469909930:51" alt="食美特" title="食美特"/></a></p>
+
+
 
                     </div>
-
+                    <p><a href="/forum/view/2" target="_blank">食美特团队</a></p>
                     <!-- 内容 end -->
                 </div>
             </div>
