--- a/app/views/infos/help/friends.scala.html
+++ b/app/views/infos/help/friends.scala.html
@@ -36,11 +36,69 @@ title = "友情链接_食美特，爱美食爱生活"
                     <h3>合作伙伴</h3>
                     <ul class="imglinks  clearfix">
 
+                            <li>
+                                <a href="http://s.click.taobao.com/t?e=zGU34CA7K%2BPkqB04MQzdgG69RGcaJQDLBg9qZFCALdE02kXvE%2BE15t4Gh8%2FlcXxAWNayzpBz8lwCxaZg66x9rDk11xU%3D" title="壳壳果" target="_blank"><img src="http://42.121.30.210/images/adv/kekeguo2.jpg" alt="壳壳果" width="100" height="60"></a>
+                            </li>
+
+                            <li>
+                                <a href="http://s.click.taobao.com/t?e=zGU34CA7K%2BPkqB04MQzdgG3VSuWRI1IF3n%2FzhW5Fn5j3AzjjGL1N0Zrcg0WqFH1A6OD%2B0yEacLlIdMoJU7SPWZnetxE%3D" title="三只松鼠" target="_blank"><img src="http://42.121.30.210/images/adv/sanzhisongshu.jpg" alt="三只松鼠" width="100" height="60"></a>
+                            </li>
+
+                            <li>
+                                <a href="http://s.click.taobao.com/t?e=zGU34CA7K%2BPkqB04MQzdgG3VSuWRI1IF3n%2FzhW5Fn5nDoyhPqW1eG%2B7AlHkrzntl6eyyN%2Fwhfpj3dv6Qfxz0Bih9Trg%3D" title="谷绿农品" target="_blank"><img src="http://42.121.30.210/images/adv/gulv.jpg" alt="谷绿农品" width="100" height="60"></a>
+                            </li>
+                            <li>
+                                <a href="http://s.click.taobao.com/t?e=zGU34CA7K%2BPkqB04MQzdgG3VSuWRI1IF3n%2FzhW5Fn5nA8R6%2BqUFVbVkJ%2By0qzqhcPE01h6u%2Fx1Skl3AKV9W%2FoWAHwLM%3D" title="广益发" target="_blank"><img src="http://42.121.30.210/images/adv/guangyifa.jpg" alt="广益发" width="100" height="60"></a>
+                            </li>
+                            <li>
+                                <a href="http://s.click.taobao.com/t?e=zGU34CA7K%2BPkqB04MQzdgG3VSuWRI1IF3n%2FzhW5Fn5nA8Ii6t0rJf5jogaqwjdbbxDYdUCq37g8zw4i7JL4CDt7rLt8%3D" title="粗粮工坊" target="_blank"><img src="http://42.121.30.210/images/adv/chulianggongfa.jpg" alt="粗粮工坊" width="100" height="60"></a>
+                            </li>
+                            <li>
+                                <a href="http://s.click.taobao.com/t?e=zGU34CA7K%2BPkqB04MQzdgG3VSuWRI1IF3n%2FzhW5Fn5nA%2BxcY91TokcbxwakZjLQ9wbAo9ML1b0FJphUz31xcuLVsEos%3D" title="果特加" target="_blank"><img src="http://42.121.30.210/images/adv/gutejia.jpg" alt="果特加" width="100" height="60"></a>
+                            </li>
+                            <li>
+                                <a href="http://s.click.taobao.com/t?e=zGU34CA7K%2BPkqB04MQzdgG3VSuWRI1IF3n%2FzhW5Fn5nBNRZTYfduicbNv3%2BVD%2BVZhZ1aEnZBB4ZaQT2gQEyL1HC3Cq0%3D" title="方家铺子" target="_blank"><img src="http://42.121.30.210/images/adv/fangjiapuzi.jpg" alt="方家铺子" width="100" height="60"></a>
+                            </li>
+                            <li>
+                                <a href="http://s.click.taobao.com/t?e=zGU34CA7K%2BPkqB04MQzdgG3VSuWRI1IF3n%2FzhW5Fn5nBPfyhj264oOH45d1gmhRDZP30X4bfyPeJUVeH4XAEapEp1Kp%2B" title="喜福来" target="_blank"><img src="http://42.121.30.210/images/adv/xifulai.jpg" alt="喜福来" width="100" height="60"></a>
+                            </li>
+                            <li>
+                                <a href="http://s.click.taobao.com/t?e=zGU34CA7K%2BPkqB04MQzdgG3VSuWRI1IF3n%2FzhW5Fn5nOqiU97WI%2BE2rLCxPKfXjlopsPkeWT%2FsY2WQ5%2BeGXpBVF0uAw%3D" title="嘛袋" target="_blank"><img src="http://42.121.30.210/images/adv/madai.jpg" alt="嘛袋" width="100" height="60"></a>
+                            </li>
+                            <li>
+                                <a href="http://s.click.taobao.com/t?e=zGU34CA7K%2BPkqB04MQzdgG3VSuWRI1IF3n%2FzhW5Fn5nP5s%2FS13WkcSenLeIL1mxrph5zoX5rR4q3kgfvORxSItMCqG8%3D" title=" 艺福堂" target="_blank"><img src="http://42.121.30.210/images/adv/yifutang.jpg" alt=" 艺福堂" width="100" height="60"></a>
+                            </li>
+                            <li>
+                                <a href="http://s.click.taobao.com/t?e=zGU34CA7K%2BPkqB04MQzdgG3VSuWRI1IF3n%2FzhW5Fn5nP4cI307ZvB1IJ29Rcfne53yn0eLCJeKhL3v3Or4AFU2APCso%3D" title="恒寿堂" target="_blank"><img src="http://42.121.30.210/images/adv/hengshoutang.jpg" alt="恒寿堂" width="100" height="60"></a>
+                            </li>
+                            <li>
+                                <a href="http://s.click.taobao.com/t?e=zGU34CA7K%2BPkqB04MQzdgG3VSuWRI1IF3n%2FzhW5Fn5nP7L0SzjM90PdJosZMwfViuyvUJqcdZtfPKs2h%2BaNSOrXjgZw%3D" title="尚客茶品" target="_blank"><img src="http://42.121.30.210/images/adv/shangkechapin.jpg" alt="尚客茶品" width="100" height="60"></a>
+                            </li>
+                            <li>
+                                <a href="http://s.click.taobao.com/t?e=zGU34CA7K%2BPkqB04MQzdgG3VSuWRI1IF3n%2FzhW5Fn5nP7Lo08E%2BTqdlcHBLEzp%2FozuFx05V%2FgHTc6TQo3Mxzp4Oha%2Fc%3D" title="每时佳" target="_blank"><img src="http://42.121.30.210/images/adv/meishijia.jpg" alt="每时佳" width="100" height="60"></a>
+                            </li>
+                            <li>
+                                <a href="http://s.click.taobao.com/t?e=zGU34CA7K%2BPkqB04MQzdgG3VSuWRI1IF3n%2FzhW5Fn576IRkq%2F3X2BXrw0QGrnE8Yi%2BnYyjH4cPPHfrYzNLUWo9hqVws%3D" title="百草味" target="_blank"><img src="http://42.121.30.210/images/adv/baicaowei.jpg" alt="百草味" width="100" height="60"></a>
+                            </li>
+                            <li>
+                                <a href="http://s.click.taobao.com/t?e=zGU34CA7K%2BPkqB04MQzdgG3VSuWRI1IF3n%2FzhW5Fn576I%2FmHjEv%2BKDA3Y0l0Ec0EBkdK%2FXDPByutbbekRU6fd2Mf7NE%3D" title="詹氏" target="_blank"><img src="http://42.121.30.210/images/adv/zhanshi.jpg" alt="詹氏" width="100" height="60"></a>
+                            </li>
+                            <li>
+                                <a href="http://s.click.taobao.com/t?e=zGU34CA7K%2BPkqB04MQzdgG3VSuWRI1IF3n%2FzhW5Fn576JqgNjXotSTnRFWI8a%2FW5F4cm6SngtZQC%2BuASYpH6m%2Bpy%2FNo%3D" title="谷的福" target="_blank"><img src="http://42.121.30.210/images/adv/gudifu.jpg" alt="谷的福" width="100" height="60"></a>
+                            </li>
+                            <li>
+                                <a href="http://s.click.taobao.com/t?e=zGU34CA7K%2BPkqB04MQzdgG3VSuWRI1IF3n%2FzhW5Fn576KFZB6ltDdGI4S7R5WcIJ%2FXCCL1U9KgR8m5fNfxOepq2WVrA%3D" title=" 丝路宝典" target="_blank"><img src="http://42.121.30.210/images/adv/silubaodian.jpg" alt=" 丝路宝典" width="100" height="60"></a>
+                            </li>
+                            <li class="last-item">
+                                <a href="http://s.click.taobao.com/t?e=zGU34CA7K%2BPkqB04MQzdgG3VSuWRI1IF3n%2FzhW5Fn577FqUi%2F2yro2WKLUn3xgATjNEBwHVclEZFJCyOPMRxwt1NZg%3D%3D" title=" amovo魔吻" target="_blank"><img src="http://42.121.30.210/images/adv/mowen.jpg" alt=" amovo魔吻" width="100" height="60"></a>
+                            </li>
                     </ul>
 
                     <h3>友情链接</h3>
                     <ul class="textlinks clearfix">
+                        <li><a href="http://s.click.taobao.com/t_9?p=mm_32611004_0_0&amp;l=http%3A%2F%2Fwww.tmall.com" target="_blank">天猫商城</a></li>
 
+                        <li><a href="http://s.click.taobao.com/t?e=zGU34CA7K%2BPkqB05%2Bm7rfGGjlY60oHcc7bkKOQifpt7KnkOYiFRC9aUtxO8SMBwBvLiDOzgTrN%2FtWL2PVKVmGF2V03YJrGxUBtYoGeQhoi%2FdEf37o%2BhUOWOOccDxVaJiTj98yToL%2Fuo5Inz977jBBNZNew0A3uvW0OzbVodnYOgZlbYNDaV5tUdjmLVt2vVe8WQk41TXUpBH" target="_blank">天猫美食</a></li>
                     </ul>
 
                         <div class="friendApply">
@@ -60,7 +118,7 @@ title = "友情链接_食美特，爱美食爱生活"
         </div>
     </div>
 
-
+</div>
 
 
         }{
