--- a/app/views/infos/help/jifenbao.scala.html
+++ b/app/views/infos/help/jifenbao.scala.html
@@ -41,7 +41,7 @@ title =  "关于我们_食美特，爱美食爱生活"
                         集分宝不可转让或换取现金。 </p>
 
                     <p>
-                       在食美特购物时，除了享受淘宝、天猫正常的折扣、赠送集分宝等等优惠之外，还享受食美特赠送的集分宝
+                       在食美特购物时，除了享受淘宝、天猫正常的折扣、赠送集分宝等等优惠之外，还享受食美特赠送的数额不等集分宝。
                     </p>
 
 
