--- a/app/views/infos/help/aboutUs.scala.html
+++ b/app/views/infos/help/aboutUs.scala.html
@@ -32,7 +32,7 @@ title =  "关于我们_食美特，爱美食爱生活"
              <div class="inner">
                  <div class="help-con">
                      <div class="help-hd">
-                         <h3>关于“食美特”</h3>
+                         <h3>关于食美特</h3>
                      </div>
                      <div class="help-bd">
                          <!-- 内容 start -->
@@ -40,11 +40,11 @@ title =  "关于我们_食美特，爱美食爱生活"
 
                          <p>Smeite.com致力于发现绿色安全、健康美味的食品，推荐美观实用、简约实惠的家居用品以及充满创意的好玩意。
                              我们严格把控商品的品质，用心创造一个值得信赖的购物分享社区。
-                             我们所做的一切，就是通过我们的努力，为更多的消费者提供更有效、更有价值的购物决策建议和更节省的购物方式！
 
                          </p>
+                         <p> 我们所做的一切，就是通过我们的努力，为更多的消费者提供更有效、更有价值的购物决策建议和更节省的购物方式！</p>
 
-                         <p>理念：为大众创造更美好的日常生活</p>
+                         <p>理念：创造更美好的日常生活</p>
 
                          <p><a href="/forum/view/2" target="_blank">食美特团队</a></p>
 
