adjust help center info

--- a/app/views/infos/help/aboutCheckIn.scala.html
+++ b/app/views/infos/help/aboutCheckIn.scala.html
@@ -4,7 +4,7 @@ user,
 title =  "关于我们_食美特，爱美食爱生活"
 )(css="/assets/css/template/infos.css") {
 
-<div class="container">
+<div class="container common clearfix">
     <div class="aside">
 
         <div class="inner">
@@ -35,13 +35,19 @@ title =  "关于我们_食美特，爱美食爱生活"
                 </div>
                 <div class="help-bd">
                     <!-- 内容 start -->
+                    <div>
                      <p>食美特的居民们，现在签到送集分宝啦</p>
+                        <p>1) 每次签到，赠送1-20个数量不等的集分宝，100个集分宝=1元现金</p>
+                        <p>2) 连续签到7天额外赠送7个集分宝</p>
+                        <p>3) 连续签到15天额外赠送15个集分宝</p>
+                        <p>4) 连续签到30天额外赠送30个集分宝</p>
+                        <p>5) 连续签到60天额外赠送100个集分宝</p>
+                        <p>6) 连续签到100天额外赠送200个集分宝</p>
+                        <p>7) 总之，连续签到的次数越多，额外赠送的集分宝越多</p>
+                    <p>亲们，非常感谢对我们的鼎力支持，我将不断的推出各种形式的签到送大礼活动</p>
+                    </div>
 
-                       todo
-                    <p>签到送大礼，精彩不断</p>
-                    <p>食美特居民们，非常感谢你们对我们的鼎力支持，我将不断的推出各种形式的签到送大礼活动</p>
-
-
+                    <p class="team"><a href="/forum/view/2" target="_blank" >食美特团队</a></p>
                     <!-- 内容 end -->
                 </div>
             </div>
