--- a/app/views/infos/help/aboutUs.scala.html
+++ b/app/views/infos/help/aboutUs.scala.html
@@ -36,6 +36,7 @@ title =  "关于我们_食美特，爱美食爱生活"
                      </div>
                      <div class="help-bd">
                          <!-- 内容 start -->
+                         <div>
                          <p>食美特，爱美食爱生活 </p>
 
                          <p>Smeite.com致力于发现绿色安全、健康美味的食品，推荐美观实用、简约实惠的家居用品以及充满创意的好玩意。
@@ -45,8 +46,9 @@ title =  "关于我们_食美特，爱美食爱生活"
                          <p> 我们所做的一切，就是通过我们的努力，为更多的消费者提供更有效、更有价值的购物决策建议和更节省的购物方式！</p>
 
                          <p>理念：创造更美好的日常生活</p>
+                         </div>
 
-                         <p><a href="/forum/view/2" target="_blank">食美特团队</a></p>
+                         <p class="team"><a href="/forum/view/2" target="_blank" >食美特团队</a></p>
 
                          <!-- 内容 end -->
                      </div>
