--- a/app/views/infos/help/contactUs.scala.html
+++ b/app/views/infos/help/contactUs.scala.html
@@ -45,7 +45,9 @@ title = "联系我们_食美特，爱美食爱生活"
 
 
                     </div>
-                    <p><a href="/forum/view/2" target="_blank">食美特团队</a></p>
+
+
+                    <p class="team"><a href="/forum/view/2" target="_blank" >食美特团队</a></p>
                     <!-- 内容 end -->
                 </div>
             </div>
