--- a/app/views/infos/help/cooperation.scala.html
+++ b/app/views/infos/help/cooperation.scala.html
@@ -54,7 +54,8 @@ title =  "关于我们_食美特，爱美食爱生活"
 
 
                     </div>
-                    <p><a href="/forum/view/2" target="_blank">食美特团队</a></p>
+
+                    <p class="team"><a href="/forum/view/2" target="_blank" >食美特团队</a></p>
                     <!-- 内容 end -->
                 </div>
             </div>
