--- a/app/views/infos/help/friends.scala.html
+++ b/app/views/infos/help/friends.scala.html
@@ -112,6 +112,8 @@ title = "友情链接_食美特，爱美食爱生活"
                             </p>
                         </div>
 
+
+                    <p class="team"><a href="/forum/view/2" target="_blank" >食美特团队</a></p>
                     <!-- 内容 end -->
                 </div>
             </div>
