--- a/app/views/infos/help/help.scala.html
+++ b/app/views/infos/help/help.scala.html
@@ -176,11 +176,11 @@ title =  "帮助中心_食美特，爱美食爱生活"
                         <p>2) 发布主题</p>
                         <p>3) 参与讨论</p>
                         <p>4) 食美特赠送</p>
-                        <p>4) ……</p>
+                        <p>5) ……</p>
 
                     </dd>
                 </dl>
-
+                <p class="team"><a href="/forum/view/2" target="_blank" >食美特团队</a></p>
                 <!-- 内容 end -->
             </div>
         </div>
