--- a/app/views/infos/help/jifenbao.scala.html
+++ b/app/views/infos/help/jifenbao.scala.html
@@ -35,6 +35,7 @@ title =  "关于我们_食美特，爱美食爱生活"
                 </div>
                 <div class="help-bd">
                     <!-- 内容 start -->
+                    <div>
                     <p>集分宝是由支付宝提供的积分服务，集分宝可以<strong class="rc">直接当钱花</strong>，100个集分宝抵扣1元钱。
                         用户在淘宝、天猫上的交易以及在支付宝网站指定的交易场景（如信用卡还款、公共事业缴费等），可在支付时按集分宝兑换人民币的比例抵扣使用集分宝。
                         用户也可通过将集分宝换购指定商品、捐赠给支付宝合作的公益项目等途径使用集分宝。用户使用集分宝时需遵守网站公布的最低使用数量等要求。
@@ -44,12 +45,11 @@ title =  "关于我们_食美特，爱美食爱生活"
                        在食美特购物时，除了享受淘宝、天猫正常的折扣、赠送集分宝等等优惠之外，还享受食美特赠送的数额不等集分宝。
                     </p>
 
+                    </div>
 
 
 
-
-                    <p><a href="/forum/view/2" target="_blank">食美特团队</a></p>
-
+                    <p class="team"><a href="/forum/view/2" target="_blank" >食美特团队</a></p>
                     <!-- 内容 end -->
                 </div>
             </div>
