--- a/app/views/infos/help/rebate.scala.html
+++ b/app/views/infos/help/rebate.scala.html
@@ -35,17 +35,18 @@ title =  "关于我们_食美特，爱美食爱生活"
                 </div>
                 <div class="help-bd">
                     <!-- 内容 start -->
+                    <div>
                     <p>返利非常简单，只需要三步就能搞定</p>
                     <p><img src="/assets/ui/help/3step.png" alt="食美特 淘宝返利"></p>
                     <h5>第一步：复制您想要购买的淘宝商品网址到食美特查询返利</h5>
-                    <p><img src="/assets/ui/help/rebate.png" alt="食美特 淘宝返利"></p>
-                    <p><img src="/assets/ui/help/rebate2.png" alt="食美特 淘宝返利"></p>
-                    <p><img src="/assets/ui/help/rebate3.png" alt="食美特 淘宝返利"></p>
+
                     <h5>第二步：通过食美特返利链接去淘宝购买商品</h5>
 
+                    <h5>第三步：在淘宝上立即购买此商品</h5>
+                    </div>
 
-                    <p><a href="/forum/view/2" target="_blank">食美特团队</a></p>
 
+                    <p class="team"><a href="/forum/view/2" target="_blank" >食美特团队</a></p>
                     <!-- 内容 end -->
                 </div>
             </div>
