--- a/app/views/infos/help/shiDou.scala.html
+++ b/app/views/infos/help/shiDou.scala.html
@@ -35,11 +35,21 @@ title =  "关于我们_食美特，爱美食爱生活"
                 </div>
                 <div class="help-bd">
                     <!-- 内容 start -->
+                    <div>
+                   <p>我华丽地登场了</p>
+                   <p>首先允许我介绍下自己 \(^o^)/~</p>
+                   <p>我非常感谢我的父亲母亲——食美特把我创造出来，我是一粒种子，我可以用来抵扣现金，我还可以提现，我还可以参与各种好玩的活动……</p>
+                   <p>总之，我的功能是相当强大的，在食美特，我才是老大！而且，我是相当值钱的，100个我 = 1元现金哦，跟集分宝是一样一样的</p>
+                   <p> 你可以通过以下方式，俘虏我的芳心</p>
+                   <p>1) 发布优质宝贝</p>
+                   <p>2) 创建宝贝主题</p>
+                   <p>3) 参与话题讨论、主题讨论、宝贝讨论</p>
+                   <p>4) 参加签到活动</p>
+                   <p>5) ……</p>
+                   <p> 赶紧拥有我把^_^</p>
+                    </div>
 
-
-
-
-                    <p><a href="/forum/view/2" target="_blank">食美特团队</a></p>
+                    <p class="team"><a href="/forum/view/2" target="_blank" >食美特团队</a></p>
 
                     <!-- 内容 end -->
                 </div>
