--- a/public/assets/css/template/convert.product.css
+++ b/public/assets/css/template/convert.product.css
@@ -26,6 +26,13 @@
     float: left;
     background-color: #f5f5f5
 }
+#J_loading{
+    margin: 100px auto;
+    text-align: center;
+}
+#J_productMain{
+    display: none;
+}
 
 .gallery {
     padding:5px;
@@ -66,56 +73,6 @@
     position: relative;
 }
 
-.side .buy-info {
-    position: relative;
-    margin: 0 0 20px;
-}
-
-
-.side .intro  {
-    position: relative;
-    text-indent: 30px;
-    padding: 10px;
-    font: 14px/24px SimSun;
-    color: #333;
-    word-wrap: break-word;
-    word-break: break-all;
-    zoom: 1;
-}
-.side .intro-quot {
-    position: absolute;
-    top: 8px;
-    left: 15px;
-    width: 20px;
-    height: 20px;
-background: url(images/ico-quotation.png) no-repeat
-}
- /* user info */
-.side .first-share {
-    padding: 10px 0;
-    border-bottom: 1px solid #ddd;
-}
-
-
-.side .user-info .pic {
-    margin-right: 8px;
-}
-
-.side .user-info .info{
-    height: 30px;
-    line-height: 30px;
-}
-.side .user-info  a {
-    font-size: 14px;
-}
-.side .user-info  a:hover{
-    color: #ff7f00;
-    text-decoration: underline;
-}
-
-.side .user-info  .come-from {
-    color: #CCC;
-}
 
 .side .title {
     font-size: 16px;
@@ -201,17 +158,6 @@ background: url(images/ico-quotation.png) no-repeat
 
 }
 
-.side .buy-info .operate {
-    padding: 10px;
-    background: #FFFDF7;
-    border-radius: 0 0 5px 5px;
-    height:30px;
-    line-height: 30px;
-}
-
-.side .buy-info .info-wrong {
-    float: right;
-}
 
 .how-to-tip {
     width: 478px;
