--- a/app/views/admin/forums/filterTopics.scala.html
+++ b/app/views/admin/forums/filterTopics.scala.html
@@ -148,6 +148,7 @@
                 <option value="3">批量取消置顶</option>
                 <option value="4">批量精华</option>
                 <option value="5">批量取消精华</option>
+                <option value="6">批量删除</option>
             </select>
             <button class="btn btn-info" id="J_batchAction" data-toggle="modal" data-target="#J_batchModal">
                 批量处理
