--- a/app/views/admin/template.scala.html
+++ b/app/views/admin/template.scala.html
@@ -85,7 +85,7 @@
                 </li>
 
                 <li class="submenu @if(nav=="topic"){active open}">
-                <a href="#"><i class="icon icon-th-list"></i> <span>广场管理</span></a>
+                <a href="#"><i class="icon icon-th-list"></i> <span>讨论吧管理</span></a>
                 <ul>
                     <li><a href="@controllers.admin.routes.Forums.list(1)">话题管理</a></li>
                     <li><a href="@controllers.admin.routes.Forums.replies(1)">评论管理</a></li>
