--- a/app/views/forums/forum.scala.html
+++ b/app/views/forums/forum.scala.html
@@ -20,7 +20,7 @@ title = "讨论吧_广场_食美特，爱美食爱生活"
                 </a>
 
                 <div class="text ofh">
-                    <a href="@controllers.routes.Forums.view(cid)" target="_blank">ctitle</a>
+                    <a href="@controllers.routes.Forums.view(cid)" target="_blank">@ctitle</a>
                 </div>
                 <span class="reply-num gc">@creplyNum 条回复</span>
             </li>
@@ -41,7 +41,7 @@ title = "讨论吧_广场_食美特，爱美食爱生活"
                 </a>
 
                 <div class="text ofh">
-                    <a href="@controllers.routes.Forums.view(cid)" target="_blank">ctitle</a>
+                    <a href="@controllers.routes.Forums.view(cid)" target="_blank">@ctitle</a>
                 </div>
                 <span class="reply-num gc">@creplyNum 条回复</span>
             </li>
